Final commit for memory management in java